# laughter-detection

./: .gitignore  Compute Features.ipynb  LICENSE  README.md  Train Model.ipynb  compute_features.py  configs.py  data_loader.py  lad.py  laugh_segmenter.py  laughter-detection-interactive.ipynb  load_data.py  models.py  requirements.txt  segment_laughter.py  setup.cfg  setup.py  train.py  train_lhotse.py  train_model.py
audio_set/: download_audio_set_mp3s.py
checkpoints/no_word_resnet_base_bigger_43fps/: best.pth.tar
checkpoints/noisy_audioset_resnet_base_drop07/: best.pth.tar
data/icsi/: chan_idx_map.pkl  get_dummy_data.sh
laughter_detector/: __init__.py  configs.py  laugh_segmenter.py  models.py  segment_laughter.py
laughter_detector/laughter_detector.egg-info/: SOURCES.txt  requires.txt
laughter_detector/utils/: audio_utils.py  data_loaders.py  dataset_utils.py  s3_utils.py  torch_utils.py
notebooks/: Compute Features.ipynb  Segment Audio.ipynb  Train Model.ipynb
scripts/: aggregate_switchboard_annotations.py  aggregrate_annotations.py  aggregrate_audioset_annotations.py  audio_set_loading.py  configs.py  download_audio_set_mp3s.py  download_audioset_metadata.sh  make_switchboard_text_dataset.py  segment_laughter.py  store_all_audioset_laughter_audio.py  store_all_icsi_audio.py  store_all_switchboard_audio.py  store_all_switchboard_train_audio.py  train.py  train_baseline.py
scripts/Evaluation/: eval_utils.py  (+43 more)
src/: configs.py  segment_laughter.py  version.py
utils/: audio_utils.py  data_loaders.py  dataset_utils.py  text_utils.py  torch_utils.py
(+110 files in other folders)
