[flake8]
exclude = .git,*migrations*,build*,old*
max-line-length = 120

[yapf]
based_on_style = facebook
column_limit = 120

[metadata]
name = Laughter detector
version = 0.0.1
author = Bartłomiej Olechno
author_email = barteko@charactr.com
description = Laughter detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/charactr-platform/laughter-detection
project_urls =
    Bug Tracker = https://github.com/charactr-platform/laughter-detection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
